# openrok

./: .gitignore  Caddyfile  Cargo.toml  Dockerfile.server  PRD.md  README.md  docker-compose.yml  traefik.dynamic.template.yml
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs  tunnel_manager.rs
apps/shared/: Cargo.toml
apps/shared/src/: protocol.rs
certs/: aturl.xyz.crt  aturl.xyz.key
